--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,42 @@ body {
     background-size: 10% 10%;
 }
 
+#t01 {
+    background-color: white;
+    font-family: arial, sans-serif;
+    width: 100%;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#t01 tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+#t01 tr:nth-child(odd) {
+    background-color: #fff;
+}
+
+#t01 th {
+    background-color: black;
+    color: white;
+}
+
+#t01 th, td{
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+#t01 caption {
+    font-family: "Verdana";
+    font-size:200%;
+    color: white;
+    text-align: center;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
 .davidLink {
     position: absolute;
     bottom: 160px;
@@ -15,6 +51,14 @@ body {
     width:500px;
     height: 170px;
     display: inline-block;
+}
+
+.displayList {
+    text-align: left;
+    font-family: arial;
+    color: black;
+    font-size:170%;
+    margin: 10px;
 }
 
 h1 {
@@ -47,14 +91,7 @@ a:visited {
     text-decoration: none;
 }
 
-a:hover {
-    font-family: Verdana;
-    color: orangered;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:active {
+a:hover, a:active {
     font-family: Verdana;
     color: orangered;
     background-color: transparent;
