--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 }
 
 .displayList {
-    text-align: left;
+    text-align: center;
     font-family: arial;
     color: black;
     font-size:170%;
