--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     background-image:  url('BackDavid.jpg');
     background-size: 10% 10%;
@@ -53,7 +54,8 @@ body {
 }
 
 .displayList {
-    text-align: center;
+    display: inline-block;
+    text-align: left;
     font-family: arial;
     color: black;
     font-size:170%;
