--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@ body {
 }
 
 .ListNavigation {
-    display: inline-block;
+    float: left;
 }
 
 .ListNavigation .NavigationButton {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 16px;
@@ -110,7 +110,8 @@ h1 {
 }
 
 form {
-    margin: 0 20px;
+    display: inline-block;
+    margin: 0px 0px;
     padding: 20px;
     font-family: Verdana;
 }
@@ -119,7 +120,6 @@ input, select {
     width: 350px;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
     border: 1px solid #ccc;
     border-radius: 20px;
     box-sizing: border-box;
@@ -128,26 +128,21 @@ input, select {
 }
 
 textarea {
-    width: 320px;
+    width: 350px;
     height: 80px;
     outline: none;
     resize: vertical;
-    padding:15px;
-    border-radius:15px;
-    border:0;
-    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
-}
-
-input[type=submit] {
-    width: 350px;
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    padding:12px;
     border: 1px solid #ccc;
     border-radius: 20px;
     box-sizing: border-box;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+    outline: none;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
     cursor: pointer;
 }
 
