--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
     width: 100%;
     border-collapse: collapse;
     width: 100%;
+    overflow-x:auto;
 }
 
 #t01 tr:hover {
@@ -137,7 +138,6 @@ textarea {
     border-radius: 20px;
     box-sizing: border-box;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
-    outline: none;
 }
 
 input[type=submit] {
